--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,60 @@
+:root {
+ --light-accent: #cb112d;
+ --dark-accent: #710112;
+}
+
 * {
  box-sizing: border-box;
 }
 
 body {
  font-family: sans-serif;
+ background-color: #181a1b;
+ color: whitesmoke;
+ padding: 50px;
+}
+
+*:not(h1) {
+ font-size: 1.1rem;
 }
 
 .container {
  max-width: 80vw;
  margin: auto;
+ background-color: rgba(0, 0, 0, 0.3);
+ padding: 2rem 0;
+ border-radius: 10%;
 }
+
+/* header and footer */
 
 header,
 footer {
  text-align: center;
 }
 
+h1 {
+ color: var(--light-accent);
+ font-family: monospace;
+}
+
 h3 {
  font-weight: 500;
 }
 
+h3,
+select,
+textarea {
+ opacity: 0.8;
+}
+
+footer {
+ margin-top: 5rem;
+}
+
+footer a {
+ color: var(--light-accent);
+}
 /* form */
 
 form {
@@ -33,13 +68,19 @@ textarea {
  padding: 10px;
  width: 100%;
  margin: 0.5rem 0 2rem;
+ background-color: rgba(0, 0, 0, 0.3);
+ border: 1px solid var(--dark-accent);
+ color: whitesmoke;
+}
+
+option {
+ background-color: rgba(0, 0, 0, 0.9);
 }
 
 select,
 textarea,
 label {
  display: block;
- font-size: 1.1rem;
 }
 
 textarea {
@@ -49,7 +90,18 @@ textarea {
 #submit {
  margin: 2rem auto;
  display: block;
- font-size: 1.1rem;
+ letter-spacing: 0.5px;
  padding: 0.5rem 2rem;
  border-radius: 10px;
+ background-color: var(--light-accent);
+ color: whitesmoke;
+ font-weight: 600;
+ border: none;
+ transition: 200ms all ease-in-out;
+}
+
+#submit:hover {
+ color: black;
+ background-color: whitesmoke;
+ cursor: pointer;
 }
