--- a/src/styles.css
+++ b/src/styles.css
@@ -18,12 +18,26 @@ body {
  font-size: 1.1rem;
 }
 
-.container {
- max-width: 80vw;
+section {
+ max-width: 1000px;
  margin: auto;
  background-color: rgba(0, 0, 0, 0.3);
  padding: 2rem 0;
  border-radius: 10%;
+}
+
+#description {
+ margin: 2rem;
+}
+
+.hidden {
+ display: none;
+}
+
+.display {
+ display: block;
+ position: relative;
+ top: 3rem;
 }
 
 /* header and footer */
@@ -84,7 +98,7 @@ label {
 }
 
 textarea {
- min-height: 10vh;
+ min-height: 20vh;
 }
 
 #submit {
