--- a/src/styles.css
+++ b/src/styles.css
@@ -159,30 +159,38 @@ textarea {
 
 @media (max-width: 600px) {
  body {
-  padding: 50px 10px;
- }
-
- section {
-  max-width: 95vw;
- }
-
- #response {
-  font-size: 1.1rem;
- }
-
- #submit {
-  width: 50vw;
+  padding: 50px 0;
  }
 
  form {
   width: 90%;
  }
 
- textarea {
+ header {
+  padding: 0 0.5rem;
+ }
+
+ h1 {
+  font-size: 1.4rem;
+ }
+
+ h3 {
   font-size: 1rem;
  }
 
- header {
-  padding: 0 0.5rem;
+ #response {
+  font-size: 1.1rem;
+ }
+
+ section {
+  max-width: 95vw;
+ }
+
+ #submit {
+  width: 50vw;
+ }
+
+ textarea {
+  font-size: 1rem;
  }
 }
