--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
- font-family: sans-serif;
+ font-family: "Poppins", sans-serif;
  background-image: url("./images/neon-grid.jpg");
  background-size: cover;
  background-repeat: no-repeat;
@@ -26,6 +26,11 @@ body {
 
 h1 {
  font-size: 1.9rem;
+}
+
+h3 {
+ width: 70%;
+ margin: auto;
 }
 
 h4 {
@@ -142,6 +147,7 @@ textarea {
  transition: 200ms all ease-in-out;
  color: black;
  font-family: monospace;
+ font-weight: 600;
 }
 
 #submit:hover {
@@ -164,6 +170,11 @@ textarea {
 
  form {
   width: 90%;
+  padding: 1rem;
+ }
+
+ footer {
+  text-align: left;
  }
 
  header {
@@ -171,11 +182,11 @@ textarea {
  }
 
  h1 {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
  }
 
  h3 {
-  font-size: 1rem;
+  width: 90%;
  }
 
  #response {
@@ -183,7 +194,11 @@ textarea {
  }
 
  section {
-  max-width: 95vw;
+  max-width: 100vw;
+ }
+
+ section:first-of-type {
+  border-radius: 0;
  }
 
  #submit {
